Address GraphTool warnings